# ic10lsp

./: .vimspector.json  Cargo.toml  LICENSE  README.md  build.rs  generate_data.py  stationpedia.txt
.claude/: settings.local.json
.github/workflows/: releases.yml
data/: constants.txt  enum_help.txt  enums.txt  help_patches.json  instructions.txt  instructions_help.txt  instructions_help_paches.json  instructions_sig.txt  logictypes.txt  reagentmodes.txt  slotlogictypes.txt  stationpedia.txt
src/: cli.rs  instructions.rs  lib.rs  main.rs  server.rs
