[package]
name = "ic10lsp"
version = "0.7.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
phf = {version="0.11.1", features=["macros"]}
serde_json = "1.0.94"
tokio = {version="1.26.0", features=["full"]}
tower-lsp = "0.19.0"
tree-sitter = "0.20.9"
tree-sitter-ic10 = "0.5.2"

[build-dependencies]
phf_codegen = "0.11.1"
